# research-os

./: .gitignore  LICENSE  README.md  pyproject.toml
.playwright-mcp/: page-2026-06-19T07-26-13-461Z.yml
docs/superpowers/plans/: 2026-04-26-research-os-implementation.md
docs/superpowers/specs/: 2026-04-26-research-os-design.md
frontend/: README.md  app.js  index.html  styles.css
skills/autosota-research-loop/: SKILL.md
src/research_os/: cli.py  workspace.py
src/research_os/bundle_builder/: __init__.py  service.py
src/research_os/distill/: __init__.py  service.py
src/research_os/domains/: __init__.py  generative.py  multimodal.py  registry.py  world_model.py
src/research_os/execution/: __init__.py  baseline.py
src/research_os/ideation/: __init__.py  service.py
src/research_os/ingest/: __init__.py  parser.py
src/research_os/innovation/: __init__.py  review.py  service.py
src/research_os/memory/: __init__.py
src/research_os/models/: __init__.py  agent_cluster.py  branch.py  brief.py  bundle.py  distill.py  evidence.py  idea.py  innovation.py  memory.py  ranking.py  redline.py  run.py  (+2 more)
templates/distilled_skill/: SKILL.md.tpl
tests/: test_agent_cluster_plan.py  test_arxiv_provider.py  test_baseline_run.py  test_bundle_create.py  test_cli_intake.py  test_cross_paper_innovation.py  test_distill_skill.py  test_evidence_create.py  test_github_provider.py  test_huggingface_provider.py  test_idea_review.py  test_ideation_ranking.py  test_live_evidence_service.py  test_redline_audit.py  test_repro_plan.py  test_runner_registry.py  test_skill_content.py
(+17 files in other folders)
