[project]
name = "research-os"
version = "0.1.0"
description = "AutoSOTA-style research operating system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
research-os = "research_os.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
